[project]
name = "voca-game"
version = "0.1.0"
description = "CLI Vocabulary Training Game"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
voca-game = "voca_game:main"

[build-system]
requires = ["setuptools>=66", "wheel"]
build-backend = "setuptools.build_meta"
